--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -12,7 +12,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.12.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
     "web-vitals": "^2.1.4"
