--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:5000",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.12.16",
     "hamburger-react": "^2.5.0",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
